--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Collection of jQuery plugins
 
 See each folder for more details
+
+This fork contains updates for jQuery.printElement to fix issues with IE.
